--- a/contact.css
+++ b/contact.css
@@ -218,7 +218,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 10px 20px;
+      padding: 1px 20px;
       z-index: 3;
     }
 
@@ -242,7 +242,7 @@
     }
 
     .nav-list a:hover {
-      color: gold;
+      color: rgb(114, 169, 233);
     }
 
     .hamburger {
@@ -265,7 +265,7 @@
     }
 
     .connect {
-      font-style: oblique;
+      font-style: newyork;
       font-size: 40px;
       color: #756767;
     }
