--- a/contact.css
+++ b/contact.css
@@ -201,7 +201,7 @@
   font-size: 15px;
 
 } */ 
- body {
+ /* body {
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
@@ -257,8 +257,175 @@
       background-color: rgb(0, 0, 0);
       margin: 5px 0;
       margin-right: 50px;
-    }
+    } */
 
+    
+.bgimage {
+  background: url('nayana.jpg') no-repeat center center/cover;
+  width: 100%;
+  height: 100vh;
+  position: relative;
+}
+
+
+ 
+.navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  background-color: transparent;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1px 20px;
+  z-index: 3;
+}
+
+
+.nav-list {
+  list-style: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
+  margin-right: 30px;
+  margin-top: 23px;
+}
+
+.nav-list li {
+  margin: 0 15px;
+  margin-top: 40px;
+
+}
+
+.nav-list a {
+  color: rgb(12, 12, 12);
+  text-decoration: none;
+  font-size: 20px;
+
+}
+
+.nav-list a:hover {
+  text-decoration: none;
+  color: rgb(106, 121, 231);
+}
+
+
+.hamburger {
+  display: none;
+  flex-direction: column;
+  cursor: pointer;
+}
+
+.hamburger span {
+  width: 30px;
+  height: 2px;
+  background-color: rgb(0, 0, 0);
+  margin: 5px 0;
+  margin-right: 50px;
+}
+
+.hamburger {
+  display: none;
+  flex-direction: column;
+  cursor: pointer;
+  padding: 10px;
+  z-index: 5;
+}
+.hamburger span {
+  width: 30px;
+  height: 3px;
+  background-color: #000;
+  margin: 5px 0;
+  transition: transform 0.3s ease, opacity 0.3s ease;
+  transform-origin: 4px center;
+  margin-right: 30px;
+}
+
+
+.hamburger.active span:nth-child(1) {
+  transform: rotate(40deg) translate(5px, 5px);
+}
+.hamburger.active span:nth-child(2) {
+  opacity: 0;
+}
+.hamburger.active span:nth-child(3) {
+  transform: rotate(-40deg) translate(5px, -5px);
+}
+
+@media (max-width: 768px) {
+  .nav-list {
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    top: 100px;
+    left: 0;
+    background-color: #f8f0e9d8;
+    width: 100%;
+    height: 400%;
+    text-align: center;
+    transform: translateX(100%);
+    transition: transform 0.5s ease-in-out;
+    margin-right: 20px;
+  }
+
+  .nav-list.active {
+    display: flex;
+    transform: translateX(0);
+  }
+
+  .nav-list li {
+    margin: 20px 0;
+  }
+
+  .hamburger {
+    display: flex;
+  }
+  .bgimage{
+    margin-top: 40%;
+  }
+
+  .bgcolor{
+    background-color: #000000d8;
+  }
+  body{
+    background-color:  #f8f0e9d8;
+  }
+  .hamburger {
+    display: flex;
+    
+  }
+
+  .nav-list {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 100px;
+    left: 0;
+    background-color: rgba(248, 240, 233, 0.85);
+    width: 100%;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.4s ease-in-out;
+  }
+  .nav-list.active {
+    max-height: 400px;
+  }
+  .nav-list li {
+    margin: 20px 0;
+  }
+
+  .bgimage {
+    margin-top: 40%;
+  }
+  .bgcolor {
+    background-color: #000000d8;
+  }
+  body {
+    background-color: rgba(248, 240, 233, 0.85);
+  }
+}
     section {
       padding: 140px 20px 40px 20px;
       text-align: center;
