--- a/home.css
+++ b/home.css
@@ -1,3 +1,15 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+html, body {
+  height: 100%;
+}
+
+.footer-push {
+  height: 100px; 
+}
+
 
 .bgimage {
   background: url('nayana.jpg') no-repeat center center/cover;
